--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -4,6 +4,8 @@
     "fieldEmail": "Email",
     "fieldPassword": "Senha",
 
+    "enterTitle": "Entrar",
+
     "fieldRequired": "Campo é obrigatório",
     "fieldMinLength": "O campo deve ter pelo menos 6 caracteres",
     "fieldInvalidEmail": "O campo deve ser um endereço de e-mail válido",
