--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,6 +6,8 @@
 
     "enterTitle": "Enter",
     "forgotPasswordTitle": "Forgot password",
+    "forgotPasswordInstructions": "Please enter your email, we will send you a verification code.",
+    "sendTitle": "Enviar",
 
     "entityErrorMessage": "Field {entityErrorMessage} is not valid",
     "@entityErrorMessage" : {
