--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -8,9 +8,11 @@
 
     "enterTitle": "Entrar",
     "forgotPasswordTitle": "Esqueci minha senha",
+    "loginTitle": "Login",
     "forgotPasswordInstructions": "Por favor, digite seu e-mail, nós lhe enviaremos um código de verificação.",
     "sendTitle": "Enviar",
     "changePasswordInstructions": "Por favor, digite seu e-mail, código de verificação e sua nova senha.",
+    "successChangePasswordTitle": "Senha alterada com sucesso!",
 
     "entityErrorMessage": "Campo {entityErrorMessage} não é válido",
     "@entityErrorMessage" : {
