--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -12,6 +12,7 @@
     "forgotPasswordInstructions": "Please enter your email, we will send you a verification code.",
     "sendTitle": "Send",
     "changePasswordInstructions": "Please enter the verification code and new password.",
+    "loginWithNewPasswordInstructions": "Please enter your new password",
     "successChangePasswordTitle": "Password was changed successfully!", 
 
     "entityErrorMessage": "Field {entityErrorMessage} is not valid",
